--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>matinda</title>
 </head>
 <body>
    <main>
@@ -12,11 +12,11 @@
     </header>
     <article>
         <h2>artigo 001</h2>
-        <p>texto 001</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae illum, enim vero iure, quidem aut consequuntur impedit adipisci libero doloremque magni consectetur voluptate laborum optio beatae hic voluptas dolores rerum?</p>
     </article>
     <article>
         <h2> artigo 001</h2>
-        <p>texto artigo 002</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta mollitia quam neque adipisci dicta non ducimus eos fugiat? Voluptatum distinctio, id quo tenetur quae odit earum provident voluptatibus repellat libero?</p>
     </article>
    </main> 
 </body>
